# agent-eval-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/agent_eval_kit/: __init__.py  gate_client.py  harness.py  modes.py  report.py
tests/: test_gate_client.py  test_harness.py  test_modes.py  test_report.py
