[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-eval-kit"
version = "0.1.0"
description = "The shared evaluation scaffold for hexagonal agent repos: the EvalReport/EvalMetricResult types and their rendering, a run_eval.py --mode smoke|gate CLI scaffold (offline heuristic vs the shared promotion authority), the Hrz4 promotion-gate HTTP client (structured target, registered bundle, results[] parse, POST gate), and a not-falsely-green harness that turns 'prove this metric can go red' into a one-liner. Pure standard library except the gate client (httpx)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Ashish Awasthi" }]
keywords = [
  "evaluation", "eval-gate", "model-risk", "llm-eval", "smoke-test",
  "promotion-gate", "not-falsely-green", "hexagonal", "ports-and-adapters", "grc",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]

# The report, modes and harness layers are pure stdlib. Only the Hrz4 gate client needs an
# HTTP client, so httpx is the single runtime dependency (it is what every vertical already
# used for its platform adapter).
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
# The test/lint toolchain. Ruff is pinned EXACTLY so formatting never drifts across machines.
# respx mocks the Hrz4 endpoints so the gate-client contract test never talks to a real service.
dev = [
  "ruff==0.15.22",
  "mypy>=1.10",
  "pytest>=8.2",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/ashishawasthi/agent-eval-kit"
Source = "https://github.com/ashishawasthi/agent-eval-kit"
Issues = "https://github.com/ashishawasthi/agent-eval-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval_kit"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
